--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -10,4 +10,4 @@ BBFILE_PATTERN_meta-openhd = "^${LAYERDIR}/"
 BBFILE_PRIORITY_meta-openhd = "6"
 
 LAYERDEPENDS_meta-openhd = "core"
-LAYERSERIES_COMPAT_meta-openhd = "kirkstone scarthgap"
+LAYERSERIES_COMPAT_meta-openhd = "kirkstone scarthgap walnascar"
